# TDPWolfenstein

./: CMakeLists.txt  ManualDeUsuario.md  Music.cpp  Music.h  Prueba_sonido.cpp  Prueba_sonido.h  README.md  SdlMusic.cpp  SdlMusic.h  SdlSound.cpp  SdlSound.h  SdlText.h  installer.sh  prueba_cmake.cpp  prueba_cmake_cliente.cpp  prueba_servidor.cpp
Client/: SdlSound.cpp  SdlTexture.cpp  client_main.cpp  prueba_cmake_cliente.cpp
Common/: blocking_queue.h  defs.h  exception.cpp  non_blocking_queue.h  protocol.h  socket.cpp  socket.h
Editor/: Editor.cpp  Editor.h  EditorManager.cpp  EditorManager.h  Event_Handler.cpp  Event_Handler.h  InputTextView.cpp  InputTextView.h  Main_Window.cpp  Main_Window.h  Map.cpp  Map.h  MapButton.cpp  MapButton.h  MapOptionsView.cpp  MapOptionsView.h  MusicSoundtrack.cpp  MusicSoundtrack.h  Scene.cpp  Scene.h  SdlMusic.cpp  SdlTexture.h  TextBox.h  YamlParser.cpp  YamlParser.h  editor_main.cpp
Editor/Editor_Assets/: EstructurasLlenadas.xcf  GreyTile.xcf
Editor/SdlClasses/: SdlText.cpp  SdlText.h  SdlWindow.cpp  SdlWindow.h
Maps/: 2_Versus.yaml  6_Fortified.yaml  6_Fortified_Maze.yaml  6_King_Of_Center.yaml  Basic.yaml  Basic_2.yaml  Deathmatch_4.yaml  Empty.yaml  Export.yaml  Fortified_6.yaml  Maze.yaml  Maze_2.yaml  Simple.yaml  amurallado_3.yaml  asdddd.yaml  bigbig.yaml  deathmatch.yaml  deathmatch_3.yaml  old_map.yaml  prueba.yaml  prueba2.yaml  prueba3.yaml  prueba4.yaml  prueba4_.yaml  prueba_2.yaml  prueba_4.yaml  pruebafinal.yaml  pruebamapa.yaml
Model/: config.h  droper.cpp  droper.h  game.cpp  game.h  interactor.cpp  interactor.h  pickuper.cpp  pickuper.h  response.h  test_interaction.cpp
Model/actions/: interact.cpp  interact.h  pick_up.cpp  pick_up.h
Model/commands/: command_attack.cpp  command_attack.h  command_change_weapon.cpp  command_change_weapon.h  command_drop.cpp  command_drop.h  command_interact.cpp  command_interact.h  command_manager.cpp  command_manager.h  command_move.cpp  command_move.h  command_open_door.cpp  command_open_door.h  command_pick_up.cpp  command_pick_up.h  object_map.cpp  object_map.h
Model/constants/: config.h  config_player.h  const_command.h  const_object_map.h
Model/enemies/: enemy.h
Model/map/: map.cpp  map.h
Model/objects/: object.h
Model/player/: droper.cpp  interactor.cpp  interactor.h  pickuper.cpp  pickuper.h  player.cpp  player.h  player_info.cpp  player_info.h  player_position.cpp  player_position.h  player_state.cpp  player_state.h
Model/position/: position_player.cpp  position_player.h
Server/: accepter.cpp  accepter.h  clientHandler.cpp  clientHandler.h  client_handler.cpp  client_handler.h  clients_connected.cpp  clients_connected.h  connection_element.h  game.cpp  game.h  login.cpp  login.h  loop.cpp  loop.h  server.cpp  server.h  server_main.cpp
Yaml_configs/: client_settings.yaml  editor_config.yaml  server_config.yaml
client/: Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  Elements_panel_queue.cpp  Game_element.cpp  Game_element.h  LogInController.cpp  LogInController.h  LoginView.cpp  LoginView.h  Map_2d.cpp  Map_2d.h  Panel_window.cpp  Player.h  Player_handler.cpp  Player_handler.h  Player_info.cpp  Player_info.h  Ray.cpp  Ray_panel.cpp  Ray_shotter.h  TextButton.cpp  TextButton.h  Wall_texture.cpp  const.h
client-model/: Main_window.cpp  Main_window.h  main.cpp
prueba_mapa/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Makefile  Map.cpp  Map.h  MovableObject.cpp  MovableObject.h  TextureManager.cpp  TextureManager.h  game  main.cpp  position.cpp  position.h
ray_casting/: Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  Command.cpp  Command.h  ConstantRateLoop_.cpp  ConstantRateLoop_.h  Constant_rate_loop.cpp  Constant_rate_loop.h  DeadBodie.cpp  DeadBodie.h  Element_panel.cpp  Element_panel.h  Elements_panel_queue.h  Event_handler.cpp  Event_handler.h  Game_element.cpp  Game_element.h  LogInController.cpp  LogInController.h  LoginView.cpp  LoginView.h  Map_2d.cpp  Map_2d.h  MusicSoundtrack.h  Panel_window.cpp  Panel_window.h  Player.cpp  Player.h  Player_handler.cpp  Player_handler.h  Player_info.cpp  Player_info.h  Ray.cpp  Ray.h  Ray_panel.cpp  Ray_panel.h  Ray_shotter.cpp  Ray_shotter.h  (+10 more)
(+244 files in other folders)
